# html-to-md-documentation-converter

./: Docs_groups.xlsx  README.md  opennlp_manual.md  opennlp_to_md.py  requirements_docs_crawler.txt
universal/: .gitignore  pyproject.toml  requirements.txt  seed_urls_full.txt  universal_html_to_md.py
universal/FULL/airflow_docs_apache_airflow_ctl_stable/: SUMMARY.md  combined.md  navigation.json  navigation.yml  site_manifest.json
universal/FULL/ambari_docs_3_0_0/: SUMMARY.md  combined.md  navigation.json  navigation.yml
universal/FULL/amoro_docs_latest/: SUMMARY.md  combined.md  site_manifest.json
universal/FULL/any23/: SUMMARY.md  combined.md  navigation.json  navigation.yml  site_manifest.json
universal/FULL/aries_documentation/: SUMMARY.md  combined.md  navigation.json  navigation.yml  site_manifest.json
universal/FULL/asterixdb_docs_0_9_9/: combined.md  navigation.json
universal/FULL/avro_docs_1_12_0/: SUMMARY.md  combined.md  navigation.json  navigation.yml  site_manifest.json
universal/FULL/axis_axis2_java_core/: SUMMARY.md  combined.md  navigation.json  navigation.yml  site_manifest.json
universal/FULL/baremaps_documentation/: SUMMARY.md  combined.md  navigation.json  navigation.yml  site_manifest.json
universal/FULL/beam_documentation/: SUMMARY.md  combined.md  navigation.json  navigation.yml  site_manifest.json
universal/docs2md/: __init__.py  cli.py  constants.py  converter.py  docusaurus.py  html_analysis.py  markdown.py  models.py  navigation.py  network.py  output.py  paths.py  scope.py  targets.py  text.py  urls.py
(+1425 files in other folders)
